--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "dependencies": {
+    "axios": "^1.9.0",
     "chart.js": "^4.4.8",
-    "chartjs": "^0.3.24",
-    "dotenv": "^16.4.7",
+    "dotenv": "^16.5.0",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
+    "express-session": "^1.18.1",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "pg": "^8.14.1"
   }
 }
